--- a/index.html
+++ b/index.html
@@ -6,5 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Git vezba</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <h1>Dobrodosli</h1>
+    </header>
+  </body>
 </html>
