--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
   <body>
     <header>
       <h1>Dobrodosli</h1>
+      <main>
+        Ovo je nasa nova stranica
+      </main>
+      <footer>
+        Copyright 2019
+      </footer>
     </header>
   </body>
 </html>
