izmenjen footer iz develop grane

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         Ovo je nasa nova stranica
       </main>
       <footer>
-        Copyright 2019
+        Master footer
       </footer>
     </header>
   </body>
